[project]
name = "loadwhiz-api"
version = "0.1.0"
description = "LoadWhiz API — load testing configuration, host verification, and k6 orchestration"
authors = [
    {name = "Krunal Shah",email = "krunal@infynno.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.136.3,<0.137.0)",
    "scalar-fastapi (>=1.8.2,<2.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "resend (>=2.30.1,<3.0.0)",
    "pybars3 (>=0.9.7,<0.10.0)",
    "celery[redis] (>=5.6.3,<6.0.0)",
    "dnspython (>=2.8.0,<3.0.0)",
    "openapi-spec-validator (>=0.7.2,<0.8.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "httpx (>=0.28.0,<1.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
